# fuel-tracker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  db.py  main.py  security.py
app/models/: fuel_record.py  maintenance.py  user.py  vehicle.py
app/routers/: admin.py  analytics.py  data_io.py  maintenance.py  records.py  users.py  vehicles.py
app/schemas/: __init__.py
app/services/: helpers.py
static/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
static/public/: manifest.json  sw.js
static/src/: main.tsx  routes.tsx  vite-env.d.ts
static/src/components/: app-icon.tsx  app-shell.tsx  bottom-sheet.tsx  chip-filter.tsx  compare-bar.tsx  empty-state.tsx  maint-icon.tsx  page-header.tsx  score-ring.tsx  stat-tile.tsx  time-range-picker.tsx  toast-host.tsx  vehicle-select.tsx
static/src/lib/: api-cache.ts  api.ts  auth.ts  format.ts  record-status.ts  runtime-config.ts  stats.ts  stores.ts  types.ts  use-active-vehicle.ts  use-media-query.ts  use-toast.ts  utils.ts
static/src/pages/: add.tsx  expenses.tsx  login.tsx  maint-detail.tsx  maintenance.tsx  overview.tsx  record-detail.tsx  records-list.tsx  stats.tsx  users.tsx  vehicles.tsx
static/src/styles/: globals.css
