[project]
name = "fuel-tracker-backend"
version = "0.5.0"
description = "Fuel tracker API (FastAPI + SQLModel + MariaDB)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "pymysql>=1.1",
    "cryptography>=43",          # for PyMySQL caching_sha2_password
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",  # for future file upload
    "pyjwt>=2.9",                # JWT auth tokens
    "bcrypt>=4",                  # password hashing
    "openpyxl>=3.1",              # Excel import/export
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]